# CMake_Tutorial

./: README.md
BasicSetup/: CMakeLists.txt
BasicSetup/application/: main.cpp
BasicSetup/src/: CMakeLists.txt
Test_garg_c++/application/: CMakeLists.txt
Test_garg_c++/include/: HelloWorld.hpp
Test_garg_c++/src/: HelloWorld.cpp
